projects/todo/kubernetes/todo-backend-app-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-backend-app-service
spec:
  type: ClusterIP 
  ports: 
  - name: todo-backend-app-port
    protocol: TCP
    port: 5000
    targetPort: 5000
  selector: 
      app: todo-backend-app
