projects/todo/kubernetes/todo-frontend-app-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-frontend-app-service
spec:
  type: ClusterIP 
  ports: 
  - name: todo-frontend-app-port
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector: 
      app: todo-frontend-app
