projects/todo/kubernetes/dev-todo-app-ingress-rule.yaml
# vi dev-namespace-inress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-mongodb-ingress-rule
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: todo.cluster.local 
    http:
      paths:
      - path: /todo/
        pathType: Prefix
        backend:
          service:
            name: todo-frontend-app-service
            port:
              number: 3000
